# Tokie

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  IMPLEMENTATION_PLAN.md  LAUNCH.md  LICENSE  README.md  RELEASE.md  SECURITY.md  TOKIE_DEVELOPMENT_PLAN_FINAL.md  pyproject.toml
.github/workflows/: ci.yml  dryrun-testpypi.yml  release.yml
docs/: ARCHITECTURE.md  CONNECTORS.md  FAQ.md
scripts/: v00_discover.py
src/tokie_cli/: __init__.py  cli.py  config.py  db.py  plans.py  plans.yaml  schema.py  task_routing.yaml  tui.py  windows.py
src/tokie_cli/alerts/: __init__.py  channels.py  engine.py  storage.py  thresholds.py
src/tokie_cli/collectors/: __init__.py  api_anthropic.py  api_gemini.py  api_openai.py  api_openai_compatible.py  base.py  claude_code.py  codex.py  copilot_cli.py  cursor_ide.py  manual.py  perplexity_api.py  registry.py
src/tokie_cli/collectors/manual_templates/: README.md  web_tools.csv
src/tokie_cli/dashboard/: __init__.py  aggregator.py  server.py
src/tokie_cli/dashboard/static/: .keep
src/tokie_cli/dashboard/templates/: index.html
src/tokie_cli/mcp_server/: __init__.py  handlers.py  server.py
src/tokie_cli/routing/: __init__.py  auto_handoff.py  handoff.py  recommender.py  table.py
src/tokie_cli/testing/: __init__.py  contract.py
templates/tokie-connector-example/: README.md  pyproject.toml
templates/tokie-connector-example/src/acme_connector/: __init__.py  collector.py
templates/tokie-connector-example/tests/: test_contract.py
tests/: conftest.py  test_alerts_channels.py  test_alerts_engine.py  test_alerts_storage.py  test_alerts_thresholds.py  test_cli.py  test_cli_scan_parallel.py  test_collectors_api_anthropic.py  test_collectors_api_gemini.py  test_collectors_api_openai.py  test_collectors_api_openai_compatible.py  test_collectors_base.py  test_collectors_claude_code.py  test_collectors_codex.py  test_collectors_copilot_cli.py  test_collectors_cursor_ide.py  test_collectors_manual.py  test_collectors_perplexity_api.py  test_collectors_registry.py  test_config.py  test_connector_template.py  test_dashboard_aggregator.py  test_dashboard_recommender.py  test_dashboard_server.py  test_db.py  test_mcp_handlers.py  test_mcp_server.py  test_plans.py  test_plans_metadata.py  test_routing_auto_handoff.py  test_routing_handoff.py  test_routing_recommender.py  test_routing_table.py  test_schema.py  test_testing_contract.py  test_tui.py  test_windows.py
