[project]
name = "tokie-cli"
version = "1.0.0rc1"
description = "Local-first CLI and dashboard that tracks token usage and subscription quotas across every AI tool you pay for."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Tokie contributors" }]
keywords = [
    "ai",
    "llm",
    "tokens",
    "usage",
    "claude",
    "cursor",
    "openai",
    "gemini",
    "anthropic",
    "quota",
    "dashboard",
    "cli",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "rich>=13.7",
    "textual>=0.60",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "keyring>=25.0",
    "desktop-notifier>=6.0",
    "platformdirs>=4.2",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "pytest-recording>=0.13",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "types-pyyaml",
    # Required for the test suite (test_mcp_handlers / test_mcp_server).
    # Regular users pick it up via `pip install 'tokie-cli[mcp]'`.
    "mcp>=1.0",
]

[project.scripts]
tokie = "tokie_cli.cli:app"

[project.entry-points.pytest11]
# Auto-registers :mod:`tokie_cli.testing.contract` as a pytest plugin
# whenever ``tokie-cli`` is installed. Third-party connector authors get
# the ``tokie_contract`` / ``tokie_event_contract`` fixtures for free.
tokie_connector = "tokie_cli.testing.contract"

[project.urls]
Homepage = "https://github.com/vamshivittali76/Tokie"
Repository = "https://github.com/vamshivittali76/Tokie"
Documentation = "https://github.com/vamshivittali76/Tokie#readme"
Issues = "https://github.com/vamshivittali76/Tokie/issues"
Changelog = "https://github.com/vamshivittali76/Tokie/blob/main/CHANGELOG.md"
"Build in public" = "https://github.com/vamshivittali76/Tokie/blob/main/IMPLEMENTATION_PLAN.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tokie_cli"]
# Hatchling bundles every file in the package tree by default, so the
# manual_templates, dashboard/templates, and dashboard/static subdirs
# come along for free without needing explicit force-include entries.

[tool.hatch.build.targets.sdist]
# Only the files we explicitly want to ship — keeps the sdist clean
# of .planning/, .venv/, dist/, terminal dumps, and local IDE config.
include = [
    "/src/tokie_cli",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
    "/SECURITY.md",
    "/pyproject.toml",
    "/TOKIE_DEVELOPMENT_PLAN_FINAL.md",
    "/IMPLEMENTATION_PLAN.md",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
# Skip the connector starter template — it's meant to be copied and
# renamed, not linted against this repo's settings.
extend-exclude = ["templates/"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",              # isort
    "B",              # flake8-bugbear
    "UP",             # pyupgrade
    "SIM",            # flake8-simplify
    "RUF",            # ruff-specific
    "N",              # naming
    "S",              # bandit (security)
]
ignore = [
    "S101",  # assert used (fine in tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "N802"]
"scripts/**/*.py" = ["S"]
"src/tokie_cli/cli.py" = ["B008"]  # typer.Option() in defaults is idiomatic
"src/tokie_cli/dashboard/server.py" = ["B008"]  # FastAPI Depends() in defaults is idiomatic

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
pretty = true
show_error_codes = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["desktop_notifier.*", "keyring.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
markers = [
    "network: test requires network access (skipped in default CI)",
    "integration: end-to-end integration test",
]
asyncio_mode = "auto"
